# microbit_v2_rgb_led

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
svd/: nrf52833.svd
